# Maja-Cam-C-Code

./: .gitignore  CMakeLists.txt  README.md  RELEASE_SCRIPTS.md  partitions.csv  release.bat  release.py
data/: secrets.json.example  settings.json  settings.json.example
docs/: API_REFERENCE.md  ARCHITECTURE.md  CAMERA_ORIENTATION.md  CAMERA_PINOUTS.md  FLASK_INTEGRATION.md  ORGANIZATION.md  OTA_SAFETY_FEATURES.md  OTA_UPDATE_SYSTEM.md  PRINTER_CONFIGURATION.md  QUICK_START_FLASK.md  ROTATION_INTEGRATION.md  SPIFFS.md
flask_server/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  FLASK_UPDATES.md  QUICKREF.md  README.md  app.py  run.py
flask_server/templates/: 404.html  500.html  index.html  logs.html  settings.html
main/: CMakeLists.txt  camera.c  camera.h  http_client.c  http_client.h  idf_component.yml  led.c  led.h  led_ring.c  led_ring.h  log_manager.c  log_manager.h  main.c  main.h  main_menu.c  main_menu.h  ota_manager.c  ota_manager.h  remote_control.c  remote_control.h  rotary_encoder.c  rotary_encoder.h  secrets.h.template  settings_manager.c  settings_manager.h  thermal_printer.c  thermal_printer.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h  wifi_provisioning.c  wifi_provisioning.h
releases/testing/: release-info.txt
releases/testing-test.1/: release-info.txt
releases/v1.0.0-test.1/: release-info.txt
releases/v1.0.0-test.1-test.1/: release-info.txt
releases/v1.0.0-test.1-test.1-test.1-test.1/: release-info.txt
website/: README.md  START_HERE.md  app.py  requirements.txt  run.py  start.bat  start.sh  wsgi.py
(+29 files in other folders)
