idf_component_register(SRCS "main.c" 
                            "wifi_manager.c" 
                            "wifi_provisioning.c"
                            "settings_manager.c"
                            "camera.c" 
                            "led.c"
                            "led_ring.c"
                            "http_client.c"
                            "remote_control.c"
                            "rotary_encoder.c"
                            "main_menu.c"
                            "thermal_printer.c"
                            "log_manager.c"
                            "ota_manager.c"
                    INCLUDE_DIRS "."
                    REQUIRES spiffs json esp_wifi esp_netif esp_http_server esp_http_client nvs_flash esp_driver_gpio driver led_strip app_update esp_https_ota esp-tls esp_timer)